--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/boots.png" class="d-block w-100" alt="Boots">
+          <div class="carousel-caption d-none d-lg-block text-dark">
+            <p class="fs-1">Meie uusim kollektsioon saapaid igaks ilmaks.</p>
+          </div>
         </div>
   
         <div class="carousel-item">
